# cooking_2025

./: Ingredient_mapping.yaml  README.md  SubgoalSimulator.py  knowledge_base.yaml  requirements.txt  subgoal_simulator.py  test_subgoal_simulator.py  test_subgoals.py  tool_mapping.yaml
unity_cooking/ROS2/install/panda_move/lib/panda_move/: CMakeLists.txt  main_ros2.py
unity_cooking/ROS2/install/panda_move/lib/panda_move/panda_move/: __init__.py  club_sandwich.py  domain.py  greek_salad.py  knowledge_base.yaml  object_level_motion.py  planner.py  problem.py  searcher.py  shrimp_salad.py  test_15_predict3_v2.py  test_33_predict2_v2.py  test_35_predict_v2.py  test_49_predict2_v2.py  test_62_predict_v2.py  test_75_predict_v2.py  test_80_predict2_v2.py  tuna_sandwich.py
unity_cooking/ROS2/install/panda_move/lib/panda_move/srv/: ActionSequences.srv  Init.srv  NewState.srv  Sync.srv
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/default_v2/: test_club_sandwich_v2.csv  test_greek_salad_v2.csv  test_shrimp_salad_v2.csv  test_tuna_sandwich_v2 copy.csv  test_tuna_sandwich_v2.csv
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/label2_v2/: test_0_label2_v2.csv  test_10_label2_v2.csv  test_11_label2_v2.csv  test_12_label2_v2.csv  test_13_label2_v2.csv  test_14_label2_v2.csv  test_15_label2_v2.csv  test_16_label2_v2.csv  test_17_label2_v2.csv  test_18_label2_v2.csv  test_19_label2_v2.csv  test_1_label2_v2.csv  test_20_label2_v2.csv  test_21_label2_v2.csv  test_22_label2_v2.csv  test_23_label2_v2.csv  test_24_label2_v2.csv  test_25_label2_v2.csv  test_26_label2_v2.csv  test_27_label2_v2.csv  test_28_label2_v2.csv  test_29_label2_v2.csv  test_2_label2_v2.csv  test_30_label2_v2.csv  test_31_label2_v2.csv  test_32_label2_v2.csv  test_33_label2_v2.csv  test_34_label2_v2.csv  test_35_label2_v2.csv  test_36_label2_v2.csv  test_37_label2_v2.csv  test_38_label2_v2.csv  test_39_label2_v2.csv  test_3_label2_v2.csv  test_40_label2_v2.csv  test_41_label2_v2.csv  test_42_label2_v2.csv  test_43_label2_v2.csv  test_44_label2_v2.csv  test_45_label2_v2.csv  (+48 more)
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/label_v2/: test_0_label_v2.csv  test_10_label_v2.csv  test_11_label_v2.csv  test_12_label_v2.csv  test_13_label_v2.csv  test_14_label_v2.csv  test_15_label_v2.csv  test_16_label_v2.csv  test_17_label_v2.csv  test_18_label_v2.csv  test_19_label_v2.csv  test_1_label_v2.csv  test_20_label_v2.csv  test_21_label_v2.csv  test_22_label_v2.csv  test_23_label_v2.csv  test_24_label_v2.csv  test_25_label_v2.csv  test_26_label_v2.csv  test_27_label_v2.csv  test_28_label_v2.csv  test_29_label_v2.csv  test_2_label_v2.csv  test_30_label_v2.csv  test_31_label_v2.csv  test_32_label_v2.csv  test_33_label_v2.csv  test_34_label_v2.csv  test_35_label_v2.csv  test_36_label_v2.csv  test_37_label_v2.csv  test_38_label_v2.csv  test_39_label_v2.csv  test_3_label_v2.csv  test_40_label_v2.csv  test_41_label_v2.csv  test_42_label_v2.csv  test_43_label_v2.csv  test_44_label_v2.csv  test_45_label_v2.csv  (+48 more)
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/original/: test_0_info.txt  test_0_label.csv  test_0_predict.csv  test_10_info.txt  test_10_label.csv  test_10_predict.csv  test_11_info.txt  test_11_label.csv  test_11_predict.csv  test_12_info.txt  test_12_label.csv  test_12_predict.csv  test_13_info.txt  test_13_label.csv  test_13_predict.csv  test_14_info.txt  test_14_label.csv  test_14_predict.csv  test_15_info.txt  test_15_label.csv  test_15_predict.csv  test_16_info.txt  test_16_label.csv  test_16_predict.csv  test_17_info.txt  test_17_label.csv  test_17_predict.csv  test_18_info.txt  test_18_label.csv  test_18_predict.csv  test_19_info.txt  test_19_label.csv  test_19_predict.csv  test_1_info.txt  test_1_label.csv  test_1_predict.csv  test_20_info.txt  test_20_label.csv  test_20_label_.csv  test_20_predict.csv  (+225 more)
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/original2/: test_0_info.txt  test_0_label.csv  test_0_predict.csv  test_10_info.txt  test_10_label.csv  test_10_predict.csv  test_11_info.txt  test_11_label.csv  test_11_predict.csv  test_12_info.txt  test_12_label.csv  test_12_predict.csv  test_13_info.txt  test_13_label.csv  test_13_predict.csv  test_14_info.txt  test_14_label.csv  test_14_predict.csv  test_15_info.txt  test_15_label.csv  test_15_predict.csv  test_16_info.txt  test_16_label.csv  test_16_predict.csv  test_17_info.txt  test_17_label.csv  test_17_predict.csv  test_18_info.txt  test_18_label.csv  test_18_predict.csv  test_19_info.txt  test_19_label.csv  test_19_predict.csv  test_1_info.txt  test_1_label.csv  test_1_predict.csv  test_20_info.txt  test_20_label.csv  test_20_predict.csv  test_21_info.txt  (+224 more)
unity_cooking/ROS2/install/panda_move/lib/panda_move/test_set/predict2_v2/: test_0_predict2_v2.csv  test_10_predict2_v2.csv  test_11_predict2_v2.csv  test_12_predict2_v2.csv  test_13_predict2_v2.csv  test_14_predict2_v2.csv  test_15_predict2_v2.csv  test_16_predict2_v2.csv  test_17_predict2_v2.csv  test_18_predict2_v2.csv  test_19_predict2_v2.csv  test_1_predict2_v2.csv  test_20_predict2_v2.csv  test_21_predict2_v2.csv  test_22_predict2_v2.csv  test_23_predict2_v2.csv  test_24_predict2_v2.csv  test_25_predict2_v2.csv  test_26_predict2_v2.csv  test_27_predict2_v2.csv  test_28_predict2_v2.csv  test_29_predict2_v2.csv  test_2_predict2_v2.csv  test_30_predict2_v2.csv  test_31_predict2_v2.csv  test_32_predict2_v2.csv  test_33_predict2_v2.csv  test_34_predict2_v2.csv  test_35_predict2_v2.csv  test_36_predict2_v2.csv  test_37_predict2_v2.csv  test_38_predict2_v2.csv  test_39_predict2_v2.csv  test_3_predict2_v2.csv  (+54 more)
unity_cooking/ROS2/src/franka_description/: CMakeLists.txt
unity_cooking/ROS2/src/panda_move/: CMakeLists.txt  package.xml  setup.py
unity_cooking/ROS2/src/panda_move/panda_move/: domain.py  main_ros2.py
unity_cooking/ROS2/src/panda_move/scripts/: main_ros2.py
unity_cooking/ROS2/src/panda_moveit_config/: CMakeLists.txt
unity_cooking/ROS2/src/ros_tcp_endpoint/: CMakeLists.txt  package.xml
(+6449 files in other folders)
