<?xml version="1.0"?>
<package format="3">
  <name>ros_tcp_endpoint</name>
  <version>0.4.0</version>
  <description>Acts as the bridge between Unity messages sent via Websocket and ROS messages.</description>

  <maintainer email="unity-robotics@unity3d.com">Unity Robotics</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building messages -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
